Compiling GLSL to SPIR-V and dynamic QRC for shader management

--- a/src/main/shaders.qrc
+++ b/src/main/shaders.qrc
@@ -1,5 +1,6 @@
+<?xml version="1.0"?>
 <!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-    
-</qresource>
+  <qresource>
+    <file alias="color.spv">../shaders/color.spv</file>
+  </qresource>
 </RCC>
